--- a/packages/youtube_player_flutter/pubspec.yaml
+++ b/packages/youtube_player_flutter/pubspec.yaml
@@ -11,7 +11,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  flutter_inappwebview: ^5.7.2+3
+  flutter_inappwebview:
+    git:
+      url: https://github.com/nesquikm/flutter_inappwebview
+      ref: heads/v5.7.2+3_fix_xcode_17
 
 dev_dependencies:
   flutter_test:
